# rinha-2026-xgboost-rust

./: Dockerfile  Dockerfile.lb  context.md  curr.json  docker-compose.yml  haproxy.cfg  info.json  prev.json  test.sh
api/: Cargo.toml
api/src/: knn.rs  main.rs  models.rs  predictor.rs  vectorizer.rs
lb/: Cargo.toml
lb/src/: main.rs
test/: results.json  test.js
training/: evaluate.py  preprocess_refs.py  requirements.txt  train.py
training/output/: model.json  model.ubj
training/output/prev/: test_model.json
