[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["sync", "time"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
