[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.14", features = ["serde_impl"] }
cookie = ">=0.16.3"
time = ">=0.3.36"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
