[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio = { version = "0.2.4", features = ["sync", "macros", "utils", "legacy"] }
httparse = "1"
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.14", features = ["serde_impl"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
